project(itkutils)

#set(ITK_DIR /Users/maryana/bin/ITK/debug)
#set(ITK_DIR /home/maryana/bin/ITK/release_static/)
set(ITK_DIR /home/maryana/bin/ITK/debug)
#set(ITK_DIR /global/homes/m/malegro/bin/ITK/release)


SET(CMAKE_BUILD_TYPE Debug)

   FIND_PACKAGE(ITK)
   IF(ITK_FOUND)
      INCLUDE(${ITK_USE_FILE})
   ELSE(ITK_FOUND)
      MESSAGE(FATAL_ERROR "Please set ITK_DIR.")   
   ENDIF(ITK_FOUND)

#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
#SET(BUILD_SHARED_LIBRARIES OFF)
#SET(CMAKE_EXE_LINKER_FLAGS "-static")

#add_executable(makevol makevol.cpp)
#add_executable(makevolrgb makevolrgb.cpp)
#add_executable(combinergb combinergb.cpp)
#add_executable(combinergb2 combinergb2.cpp)
#add_executable(regsnap regsnap.cpp)
add_executable(imginfo ImageInfo.cpp)
#add_executable(makevolrgbraw makevolrgbraw.cpp)
#add_executable(makechecker makechecker.cpp)
#add_executable(savebinmasks savebinmasks.cpp)
#add_executable(saveslices saveslices.cpp)
#add_executable(testanisodiff testanisodiff.cpp)
#add_executable(testanisodiffgrad testanisodiffgrad.cpp)
#add_executable(getroi getroi.cpp)
#add_executable(getroislices getroislices.cpp)
#add_executable(getslices getslices.cpp)
add_executable(changevolhdr changevolhdr.cpp)

#target_link_libraries(makevol ${ITK_LIBRARIES} )
#target_link_libraries(makevolrgb ${ITK_LIBRARIES} )
target_link_libraries(imginfo ${ITK_LIBRARIES} )
#target_link_libraries(combinergb ${ITK_LIBRARIES} )
#target_link_libraries(combinergb2 ${ITK_LIBRARIES} )
#target_link_libraries(regsnap ${ITK_LIBRARIES} )
#target_link_libraries(makevolrgbraw ${ITK_LIBRARIES} )
#target_link_libraries(makechecker ${ITK_LIBRARIES} )
#target_link_libraries(savebinmasks ${ITK_LIBRARIES} )
#target_link_libraries(saveslices ${ITK_LIBRARIES} )
#target_link_libraries(testanisodiff ${ITK_LIBRARIES} )
#target_link_libraries(testanisodiffgrad ${ITK_LIBRARIES} )
#target_link_libraries(getroi ${ITK_LIBRARIES} )
#target_link_libraries(getroislices ${ITK_LIBRARIES} )
#target_link_libraries(getslices ${ITK_LIBRARIES} )
target_link_libraries(changevolhdr ${ITK_LIBRARIES} )

#install(TARGETS makevol RUNTIME DESTINATION bin)
